--- a/AugMeal/bin/AndroidManifest.xml
+++ b/AugMeal/bin/AndroidManifest.xml
@@ -6,10 +6,30 @@
 
     <uses-sdk android:minSdkVersion="16" />
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_GPS" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.location"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.sensor.accelerometer"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.sensor.compass"
+        android:required="true" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -41,6 +61,24 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sporkinnovations.augmeal.VenuesActivity" />
         </activity>
+        <activity
+            android:name="com.sporkinnovations.augmeal.MenuActivity"
+            android:label="@string/title_activity_menue"
+            android:parentActivityName="com.sporkinnovations.augmeal.VenuesActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sporkinnovations.augmeal.MenuActivity" />
+        </activity>
+        <activity
+            android:name="com.sporkinnovations.augmeal.DishesActivity"
+            android:label="@string/title_activity_dishes"
+            android:parentActivityName="com.sporkinnovations.augmeal.MenuActivity"
+            android:configChanges="screenSize|orientation">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sporkinnovations.augmeal.MenuActivity" />
+        </activity>
+ 
     </application>
 
 </manifest>
