--- a/AugMeal/AndroidManifest.xml
+++ b/AugMeal/AndroidManifest.xml
@@ -46,7 +46,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.sporkinnovations.augmeal.VenuesActivity"
+            android:name="com.sporkinnovations.augmeal.VenueActivity"
             android:label="@string/title_activity_venues"
             android:parentActivityName="com.sporkinnovations.augmeal.MainActivity" >
             <meta-data
@@ -56,7 +56,7 @@
         <activity
             android:name="com.sporkinnovations.augmeal.InfoActivity"
             android:label="@string/title_activity_info"
-            android:parentActivityName="com.sporkinnovations.augmeal.VenuesActivity" >
+            android:parentActivityName="com.sporkinnovations.augmeal.VenueActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sporkinnovations.augmeal.VenuesActivity" />
@@ -64,13 +64,13 @@
         <activity
             android:name="com.sporkinnovations.augmeal.MenuActivity"
             android:label="@string/title_activity_menue"
-            android:parentActivityName="com.sporkinnovations.augmeal.VenuesActivity" >
+            android:parentActivityName="com.sporkinnovations.augmeal.VenueActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sporkinnovations.augmeal.MenuActivity" />
         </activity>
         <activity
-            android:name="com.sporkinnovations.augmeal.DishesActivity"
+            android:name="com.sporkinnovations.augmeal.DishActivity"
             android:label="@string/title_activity_dishes"
             android:parentActivityName="com.sporkinnovations.augmeal.MenuActivity"
             android:configChanges="screenSize|orientation">
