--- a/AugMeal/.classpath
+++ b/AugMeal/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="lib" path="/Users/Disiok/git/augmeal/AugMeal/libs/wikitudesdk.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/picasso-2.2.0.jar"/>
+	<classpathentry kind="lib" path="libs/commons-io-2.4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
